Fix login screen on konqueror (tested on FF2, FF3, IE6, IE7, Safari) to avoid labels to be mostly hidden by input.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@16742 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/login.css
+++ b/share/html/NoAuth/css/web2/login.css
@@ -69,18 +69,11 @@ margin-right:auto;margin-left:auto;
 
 #login-box .input-row .label {
 
- position: absolute;
- left:0em;
- width: 5.5em;
+ float: left;
+ width: 8em;
  text-align: right;
  font-weight: bold;
 
 
-}
-
-
-#login-box .input-row .input {
- position: absolute;
- left:6em;
 }
 
